k8s/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: demo-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: ms-service-a:latest #se cambia 1.0 para provocar fallo y probar el pipeline
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: demo-mesh
spec:
  selector:
    app: service-a
  ports:
  - port: 5000
    targetPort: 5000
